--- a/plugins/layouts/three-column/chess/css/chess.css
+++ b/plugins/layouts/three-column/chess/css/chess.css
@@ -1,8 +1,8 @@
 @media only screen and (min-width: 0px) {
-  .layout--percles-left {
+  .layout--chess {
     padding: 1em calc(((50vw /12) * 0) + 20px);
   }
-  .layout--percles-left::after {
+  .layout--chess::after {
     clear: both;
     content: "";
     display: block;
@@ -10,10 +10,10 @@
 }
 
 @media only screen and (min-width: 992px) and (max-width: 1199px) {
-  .layout--percles-left {
+  .layout--chess {
     padding: 1em calc(((50vw /12) * 0) + 20px);
   }
-  .layout--percles-left::after {
+  .layout--chess::after {
     clear: both;
     content: "";
     display: block;
@@ -21,10 +21,10 @@
 }
 
 @media only screen and (min-width: 1200px) {
-  .layout--percles-left {
+  .layout--chess {
     padding: 1em calc(50vw - (600px - 20px));
   }
-  .layout--percles-left::after {
+  .layout--chess::after {
     clear: both;
     content: "";
     display: block;
@@ -32,52 +32,49 @@
 }
 
 @media only print {
-  .layout--percles-left {
+  .layout--chess {
     padding: 1em calc(((50vw /12) * 0) + 0.25in);
   }
-  .layout--percles-left::after {
+  .layout--chess::after {
     clear: both;
     content: "";
     display: block;
   }
 }
 
-.layout--percles-left::after {
-  clear: both;
-  content: "";
-  display: block;
-}
-
-.layout--percles-left .grid-collapse {
-  margin-left: -20px;
-  margin-right: -20px;
-  width: calc(100% + 40px);
-}
-
-.layout--percles-left .grid-collapse::after {
+.layout--chess::after {
   clear: both;
   content: "";
   display: block;
 }
 
 @media only screen and (min-width: 576px) {
-  .layout--percles-left .column {
+  .layout--chess .grid-collapse {
+    margin-left: -20px;
+    margin-right: -20px;
+    width: calc(100% + 40px);
+  }
+  .layout--chess .grid-collapse::after {
+    clear: both;
+    content: "";
+    display: block;
+  }
+}
+
+@media only screen and (min-width: 576px) {
+  .layout--chess .column {
+    width: calc(50% - 30px);
+    float: left;
+    margin-left: 20px;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .layout--chess .column {
     width: calc(33.33333% - 26.66667px);
     float: left;
     margin-left: 20px;
   }
 }
 
-@media only screen and (min-width: 576px) {
-  .layout--percles-left .column--second {
-    width: calc(66.66667% - 33.33333px);
-    float: left;
-    margin-left: 20px;
-  }
-}
-
-.layout--percles-left .column--third {
-  clear: both;
-}
-
-/*# sourceMappingURL=percles-left.css.map */
+/*# sourceMappingURL=chess.css.map */
